--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   local_dir: public
+  fqdn: sensorimotor.de
   github_token: $GITHUB_TOKEN
   on:
     branch: master
